--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,10 @@ html {
     padding: 0;
     text-align: center;
 }
+text {
+    padding: 0;
+    margin: 0;
+}
 h1 {
     margin: 50px;
     font-size: 100px;
@@ -18,12 +22,7 @@ ul {
     padding: 0;
 }
 button {
-    width: 120px;
-    margin: 10px;
-    padding: 5px;
     border: none;
-    background-color: #04640f;
-    font-size: 40px;
     cursor: pointer;
 }
 button:focus {
@@ -31,6 +30,13 @@ button:focus {
 }
 button:active {
     transform: scale(0.95);
+}
+.mainBt {
+    width: 120px;
+    margin: 10px;
+    padding: 5px;
+    background-color: #04640f;
+    font-size: 40px;
 }
 .wraper {
     width: 630px;
@@ -75,7 +81,7 @@ button:active {
 .stoper > :nth-child(2) {
     background-color: #db1100;
 }
-.stoper button:last-child {
+.clearBt {
     width: 100%;
     margin: 0;
     background-color: #ffff00;
@@ -102,20 +108,20 @@ button:active {
     padding-left: 15px;
     position: relative;
 }
-.scoreboard li:first-child {
-    color:#db1100;
+.stopBt {
+    background-color: #db1100;
 }
 .scoreboard li:nth-child(2n-1) {
     background-color: #483ab2;
 }
-.scoreboard li button {
+.closeBt {
     width: 30px;
     height: 30px;
     background-color: transparent;
     position: absolute;
-    right: 40px;
+    right: 10px;
 }
-.scoreboard li button:after, .scoreboard li button:before {
+.closeBt:after, .closeBt:before {
     content: "";
     width: 30px;
     height: 5px;
@@ -126,13 +132,8 @@ button:active {
     top: 13px;
     transform: rotate(45deg);
 }
-.scoreboard li button:before {
+.closeBt:before {
     transform: rotate(-45deg);
-}
-
-.scoreboard button {
-    width: 100%;
-    margin: 0;
 }
 .timeLoad {
     width: 200px;
@@ -149,4 +150,51 @@ button:active {
 }
 .timeLoad input:focus {
     outline: none;
+}
+.napBt{
+    width: 100px;
+    height: 30px;
+    padding: 0;
+    border-radius: 15px;
+    background-color: #800080;
+    position: absolute;
+    bottom: 5px;
+    left: 40px;
+    font-size: 15px;
+}
+.stopSound {
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+    background-color: #db1100;
+    position: absolute;
+    bottom: 5px;
+    left: 0px;
+}
+.stopSound:before {
+    content: '';
+    width: 15px;
+    height: 15px;
+    background-color: #ffffff;
+    position: absolute;
+    top: 6.5px;
+    left: 6.5px;
+}
+.alarmModal {
+    height: 200px;
+    width: 300px;
+    border: 5px solid #001674;
+    box-sizing: border-box;
+    background-color: #001674;
+    position: absolute;
+    top: 100px;
+    left: 165px
+}
+.alarmModal .closeBt {
+    bottom: 5px;
+    right: 0;
+}
+.alarmModal p {
+    padding: 30px;
+    background-color: #dd0000;
 }
