--- a/css/index.css
+++ b/css/index.css
@@ -190,11 +190,35 @@ button:active {
     left: 17.5px;
 }
 .napIn {
-    width: 50px;
+    width: 70px;
     height: 40px;
     border: none;
     box-sizing: border-box;
     background-color: #7103c1;
     font-size: 15px;
     text-align: center;
+}
+.setSound {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 1;
+}
+
+.soundWrap {
+    width: 125px;
+    padding-top: 40px;
+    background-color: #333333;
+    position: absolute;
+    top: 0px;
+    right: -70px;
+    text-align: left;
+}
+.soundWrap label {
+    display: block;
+    margin: 15px 0;
+    font-size: 25px;
+    color: #ffffff;
 }
